<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_gps</name>
  <version>0.0.0</version>
  <description>nav2 with gps</description>
  <maintainer email="pedro.gonzalez@eia.edu.co">pepisg</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <license>MIT</license>

  <depend>navigation2</depend>
  <depend>robot_localization</depend>
  <exec_depend>odom_to_tf_ros2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
