<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>factory_tester</name>
  <version>0.0.1</version>
  <description>Factory service caller that calls the robot to a location every 3-10 minutes</description>
  <maintainer email="scarr@iconbuild.com">scarr</maintainer>
  <license> icon </license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>deliverybots_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
